Updates from Overleaf

--- a/Beef Recipes/Chili/Chili.tex
+++ b/Beef Recipes/Chili/Chili.tex
@@ -26,7 +26,7 @@
 \textbf{Procedure:}
 
 \begin{enumerate}
-\item \textit{\textbf{Note:}} Trust me on the celery. Sounds weird, but it adds a really nice crunchy texture to the chili and it's a good way to get the extra veggies in! A can of corn isn't bad to add in either, if you're feeling adventurous.
+\item \textit{\textbf{Note:}} A can of corn isn't bad to add in. if you're feeling adventurous.
 \item Cook ground meat with onion and bell peppers. 
 
 \item Drain excess grease and add tomatoes, seasonings, and water. Bring to a boil. 
