--- a/Main.tex
+++ b/Main.tex
@@ -84,7 +84,7 @@
 \newpage
 
 
-\section{Garlic and Shrimp Quinoa with Brussels Sprouts}
+\section{Garlic and Shrimp Quinoa}
 \input{Seafood Recipes/Garlic and Shrimp Quinoa/Garlic and Shrimp Quinoa}
 
 \chapter{Vegetarian Recipes}
@@ -99,15 +99,15 @@
 \section{Mushroom Lentil Soup}
 \input{Soups & Stews/Mushroom Lentil Soup/Mushroom Lentil Soup.tex}
 \newpage
-\section{Spiced Lentils and Rice}
-\input{Vegetarian Recipes/Spiced Lentils and Rice/Spiced Lentils and Rice}
-\newpage
+%\section{Spiced Lentils and Rice}
+%\input{Vegetarian Recipes/Spiced Lentils and Rice/Spiced Lentils and Rice}
+%\newpage
 \section{Mushrooms and Rice}
 \input{Vegetarian Recipes/Mushrooms and Rice/Mushrooms and Rice}
 \newpage
-\section{Sesame Garlic Ramen}
-\input{Vegetarian Recipes/Sesame Garlic Ramen Noodles/Sesame Garlic Ramen}
-\newpage
+%\section{Sesame Garlic Ramen}
+%\input{Vegetarian Recipes/Sesame Garlic Ramen Noodles/Sesame Garlic Ramen}
+%\newpage
 \section{Mushroom Risotto}
 \input{Vegetarian Recipes/Mushroom Risotto/Mushroom Risotto.tex}
 
