--- a/Seafood Recipes/Garlic and Shrimp Quinoa/Garlic and Shrimp Quinoa.tex
+++ b/Seafood Recipes/Garlic and Shrimp Quinoa/Garlic and Shrimp Quinoa.tex
@@ -28,11 +28,11 @@
 
 
 \begin{enumerate}
-\item In a large pan, cook shrimp in 2 tbsp olive oil, chili powder, salt, and cayenne until pink. Remove from pan and set aside. Sautee garlic and diced onion in pan in another tablespoon of olive oil until onions are translucent. 
+\item In a large pan, cook shrimp in 2 tbsp olive oil, chili powder, salt, and cayenne until pink. Remove from pan and set aside. 
 
-\medskip
+\medskip \item Sautee garlic and diced onion in pan in another tablespoon of olive oil until onions are translucent. 
 
-\item At the same time start oven roasting or steaming brussels sprouts. 
+
 
 \medskip
 
