Updates from Overleaf

--- a/Main.tex
+++ b/Main.tex
@@ -47,6 +47,9 @@
 \newpage
 \section{Curry Stir Fry}
 \input{Chicken Recipes/Curry Stir Fry/Curry Stir Fry}
+\newpage
+\section{Thai Red Curry}
+\input{Chicken Recipes/Thai Red Curry/Thai Red Curry}
  
 \chapter{Beef Recipes}
 \newpage
