--- a/Main.tex
+++ b/Main.tex
@@ -137,4 +137,9 @@
 \section{Blondies}
 \input{Baked Goods/Blondies/Blondies.tex}
 
+\chapter{Desserts and Drinks}
+\newpage 
+\section{Chai}
+\input{Deserts and Drinks/Chai Tea/Chai Tea}
+
 \end{document}
