--- a/Main.tex
+++ b/Main.tex
@@ -50,6 +50,9 @@
 \newpage
 \section{Thai Red Curry}
 \input{Chicken Recipes/Thai Red Curry/Thai Red Curry}
+\newpage 
+\section{Chicken Marsala}
+\input{Chicken Recipes/Chicken Marsala/Chicken Marsala}
  
 \chapter{Beef Recipes}
 \newpage
