--- a/Baked Goods/Banana Bread/Banana Bread.tex
+++ b/Baked Goods/Banana Bread/Banana Bread.tex
@@ -1,6 +1,8 @@
 \begin{multicols}{2}
-\textbf{Ingredients}
+\fontsize{14}{1.5}\selectfont
+\textbf{Ingredients:}
 \begin{itemize}
+\setlength{\itemsep}{20pt}
 \item $2\frac{1}{4}$ cups flour
 \item 1 stick of butter
 \item 2 eggs  \quad
@@ -12,8 +14,6 @@
 \item 1 teaspoon baking powder
 \item 1 teaspoon baking soda 
 \item $\frac{1}{2}$ teaspoon salt
-
-
 
 
 \end{itemize}
