--- a/Baked Goods/Blondies/Blondies.tex
+++ b/Baked Goods/Blondies/Blondies.tex
@@ -1,6 +1,8 @@
 \begin{multicols}{2}
-\textbf{Ingredients}
+\fontsize{14}{1.5}\selectfont
+\textbf{Ingredients:}
 \begin{itemize}
+\setlength{\itemsep}{20pt}
 \item $2\frac{1}{4}$ cups flour
 \item $1\frac{1}{4}$ cups brown sugar (tightly packed)
 \item $\frac{1}{2}$ cup white sugar
