--- a/Baked Goods/Cranberry Tart/Cranberry Tart.tex
+++ b/Baked Goods/Cranberry Tart/Cranberry Tart.tex
@@ -1,6 +1,8 @@
 \begin{multicols}{2}
-\textbf{Ingredients}
+\fontsize{14}{1.5}\selectfont
+\textbf{Ingredients:}
 \begin{itemize}
+\setlength{\itemsep}{20pt}
 \item 1 cups flour
 \item $\frac{3}{4}$ cup melted butter 
 \item 2 eggs (room temperature) 
