--- a/Baked Goods/Lemon Loaf/Lemon Loaf.tex
+++ b/Baked Goods/Lemon Loaf/Lemon Loaf.tex
@@ -1,6 +1,8 @@
 \begin{multicols}{2}
-\textbf{Ingredients} 
+\fontsize{14}{1.5}\selectfont
+\textbf{Ingredients:} 
 \begin{itemize}
+\setlength{\itemsep}{20pt}
 \item 2 cups flour
 \item 3 eggs (room temperature)  
 \item $1\frac{1}{4}$ cup white sugar 
