--- a/Baked Goods/Zucchini Bread/Zucchini Bread.tex
+++ b/Baked Goods/Zucchini Bread/Zucchini Bread.tex
@@ -1,7 +1,9 @@
 \begin{multicols}{2}
-\textbf{Ingredients}
+\fontsize{14}{1.5}\selectfont
+\textbf{Ingredients:}
 \begin{itemize}
-\item 3.5 cups flour 
+\setlength{\itemsep}{20pt}
+\item 3$\frac{1}{2}$ cups flour 
 \item 1 cup vegetable oil 
 \item 3 eggs 
 \item 1 cup white sugar
