--- a/Beef Recipes/Chili/Chili.tex
+++ b/Beef Recipes/Chili/Chili.tex
@@ -1,6 +1,8 @@
 \begin{multicols}{2}
-\textbf{Ingredients}
+\fontsize{14}{1.5}\selectfont
+\textbf{Ingredients:}
 \begin{itemize}
+\setlength{\itemsep}{20pt}
 \item 2 lbs ground beef
 \item 1 yellow onion
 \item 2 red bell peppers
@@ -16,6 +18,7 @@
 \item 2 tsp. salt
 \item 1 tsp. smoked paprika
 \item 1 cup water 
+\item 2 cups shredded cheese (I prefer colby jack for this) 
 
 
 
@@ -26,14 +29,13 @@
 \textbf{Procedure:}
 
 \begin{enumerate}
-\item \textit{\textbf{Note:}} A can of corn isn't bad to add in. if you're feeling adventurous.
 \item Cook ground meat with onion and bell peppers. 
 
 \item Drain excess grease and add tomatoes, seasonings, and water. Bring to a boil. 
 
 \item Add beans, cover and simmer for 1-2 hours. 
 
-\item Serve with shredded cheese on top. Colby jack is my favorite! Highly recommend serving over fritos but it's not the healthiest. 
+\item Serve with shredded cheese on top. 
 \end{enumerate}
 
 
