--- a/Breakfast Recipes/Maple Granola Bunches/Maple Granola Bunches.tex
+++ b/Breakfast Recipes/Maple Granola Bunches/Maple Granola Bunches.tex
@@ -1,6 +1,9 @@
-\begin{multicols}{2}
-\textbf{Ingredients}
+ \begin{multicols}{2}
+\fontsize{14}{1.5}\selectfont
+\textbf{Ingredients:}
+\medskip
 \begin{itemize}
+\setlength{\itemsep}{20pt}
 \item 1 cup sliced almonds 
 \item $\frac{1}{3}$ cup of olive oil 
 \item $\frac{2}{3}$ cup maple syrup 
