--- a/Breakfast Recipes/Overnight Oats/Cinnamon Apple Overnight Oats.tex
+++ b/Breakfast Recipes/Overnight Oats/Cinnamon Apple Overnight Oats.tex
@@ -1,6 +1,9 @@
 \begin{multicols}{2}
-\textbf{Ingredients}
+\fontsize{14}{1.5}\selectfont
+\textbf{Ingredients:}
+\medskip
 \begin{itemize}
+\setlength{\itemsep}{20pt}
 \item $1\frac{1}{2}$ cup rolled oats
 \item $1\frac{1}{2}$ cup oat milk 
 \item $\frac{3}{4}$ cup of vanilla yogurt 
