--- a/Chicken Recipes/Thai Red Curry/Thai Red Curry.tex
+++ b/Chicken Recipes/Thai Red Curry/Thai Red Curry.tex
@@ -1,8 +1,10 @@
 
-
 \begin{multicols}{2}
-\textbf{Ingredients}
+\fontsize{14}{1.5}\selectfont
+\textbf{Ingredients:}
+\medskip
 \begin{itemize}
+\setlength{\itemsep}{20pt}
 \item 2 red bell peppers
 
 \item 1 lb green beans  
@@ -36,5 +38,3 @@
  \item Cook the vegetables until they are soft and then add the chicken back to the mix. Cook for another few minutes and add salt,  lime juice, and basil to taste. Serve over jasmine rice. 
 \end{enumerate}
 \end{multicols}
-\centering \includegraphics[scale=0.15]{Chicken Recipes/Thai Red Curry/IMG_8941-EDIT (1).jpg}
-
