Update Garlic and Shrimp Quinoa.tex

--- a/Seafood Recipes/Garlic and Shrimp Quinoa/Garlic and Shrimp Quinoa.tex
+++ b/Seafood Recipes/Garlic and Shrimp Quinoa/Garlic and Shrimp Quinoa.tex
@@ -1,6 +1,8 @@
 \begin{multicols}{2}
-\textbf{Ingredients}
+\fontsize{14}{1.5}\selectfont
+\textbf{Ingredients:}
 \begin{itemize}
+\setlength{\itemsep}{20pt}
 \item 2 lbs peeled \& deveined shrimp 
 \item 1 yellow onion (diced)
 \item $\sim 6$ cloves of garlic (minced)
@@ -44,9 +46,3 @@
 \end{enumerate}
 
 \end{multicols}
-
-
-
-%\begin{center}
-%\includegraphics[scale=0.65]{Pasta/Shrimp Scampi/Shrimp Scampi.jpg}
-%\end{center}
