--- a/Soups & Stews/Baked Potato Soup/Baked Potato Soup.tex
+++ b/Soups & Stews/Baked Potato Soup/Baked Potato Soup.tex
@@ -1,6 +1,9 @@
 \begin{multicols}{2}
-\textbf{Ingredients}
+\fontsize{14}{1.5}\selectfont
+\textbf{Ingredients:}
+\medskip
 \begin{itemize}
+\setlength{\itemsep}{20pt}
 \item 1 onion 
 \item 1 lbs bacon 
 \item 3 lbs cubed potatoes 
