--- a/Soups & Stews/Beef Stew/Beef Stew.tex
+++ b/Soups & Stews/Beef Stew/Beef Stew.tex
@@ -1,6 +1,9 @@
 \begin{multicols}{2}
-\textbf{Ingredients}
+\fontsize{14}{1.5}\selectfont
+\textbf{Ingredients:}
+\medskip
 \begin{itemize}
+\setlength{\itemsep}{20pt}
 \item 1 onion 
 \item 2 lbs stew beef 
 \item 1 can diced tomatoes
