--- a/Soups & Stews/Green Chile Chicken Stew/Green Chile Chicken Stew.tex
+++ b/Soups & Stews/Green Chile Chicken Stew/Green Chile Chicken Stew.tex
@@ -1,12 +1,14 @@
 \begin{multicols}{2}
-\textbf{Ingredients}
+\fontsize{14}{1.5}\selectfont
+\textbf{Ingredients:}
 \begin{itemize}
+\setlength{\itemsep}{20pt}
 \item 1 onion 
 \item 2 lbs cubed chicken breast
 \item 2 cans of cream of chicken soup 
 \item 1 lb baby carrots \quad 
 \item 3 russet potatoes (medium/medium large)
-\item 1 Jar of green chile (I use santa fe hot)
+\item 1 jar of green chile (I use santa fe hot)
 \item 1 can of corn (with water)
 \item $\sim 5$ cloves of garlic (minced) 
 \item 4-5 cups of water (enough to fill $\frac{1}{4}$ inch from rim of crock pot.)
@@ -27,7 +29,7 @@
 
 
 \begin{enumerate}
-\item \textbf{\textit{Note:}}This is a MASSIVE recipe. This will fill an 8-quart slow cooker to the brim. 
+\item \textbf{\textit{Note:}} This is a MASSIVE recipe. This will fill an 8-quart slow cooker to the brim. 
 \item Dice onion, cube potatoes, and chop carrots into bite size pieces. Add to crock pot. Add canned items, and freeze the remaining green chile.  
 
 
