--- a/Vegetarian Recipes/Mushroom Risotto/Mushroom Risotto.tex
+++ b/Vegetarian Recipes/Mushroom Risotto/Mushroom Risotto.tex
@@ -1,6 +1,8 @@
 \begin{multicols}{2}
-\textbf{Ingredients}
+\fontsize{14}{1.5}\selectfont
+\textbf{Ingredients:}
 \begin{itemize}
+\setlength{\itemsep}{20pt}
 \item 1 lb white mushrooms
 \item $1\frac{1}{2}$ cups arborio rice
 \item 10 oz. grape tomatoes
